--- a/client/Tic-Tac-Toe/src/app/game/game.component.css
+++ b/client/Tic-Tac-Toe/src/app/game/game.component.css
@@ -1,6 +1,4 @@
-
-
-.column{
+/* .column{
     border: 2px solid black;
     width: 30vh;
     height: 30vh;
@@ -16,4 +14,22 @@
 img{
     width: 30vh;
     height: 30vh;
+} */
+
+.board{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    color: white;
+}
+
+.status{
+    color: black;
+    font-size: 1.4em;
+    font-weight: bold;
+}
+
+.new-game{
+    width: 100%;
 }
