--- a/client/Tic-Tac-Toe/src/app/lobby/lobby.component.html
+++ b/client/Tic-Tac-Toe/src/app/lobby/lobby.component.html
@@ -1,21 +1,21 @@
 <div>
     <div style="display: flex;">
-      <button (click)="emitNumber()">emit data</button>
+      <!-- <button (click)="emitNumber()">emit data</button>
       <button (click)="emitroom2()">join room 2</button>
-      <button (click)="emitroom3()">join room 3</button> <br>
+      <button (click)="emitroom3()">join room 3</button> <br> -->
       <button routerLink="/game" routerLinkActive="active" *ngIf="join" (click)=emitJoinGame(data)>{{data.sender}} invited you to game</button>
     </div>
-    <input [(ngModel)]="someNumber"/>
+    <!-- <input [(ngModel)]="someNumber"/> -->
     <h1>{{data}} </h1> <br>
   </div>
   <div>
     <!-- <li *ngFor="let user of UserList; index as i; first as isFirst">
       <button (click)="emitInvite(user)" #userid>{{i+1}}/{{UserList.length}}. {{user}} - {{userNameFromCookie}} </button>
     </li> -->
-    <!-- this is for chat -->
+    <!-- this is for chat
     <li *ngFor="let user of userNamelist; index as i; first as isFirst">
       <button (click)='Onuserselect(user)'> {{user}} - chat </button>
-    </li> <br>
+    </li> <br> -->
 
     <!-- this is for game invite -->
     <li *ngFor="let user of userNamelist; index as i; first as isFirst">
@@ -29,3 +29,4 @@
     <button (click)=sendMessage()>submit</button>
   </form>
 </div>
+
