--- a/client/Tic-Tac-Toe/src/app/sign-up/sign-up.component.html
+++ b/client/Tic-Tac-Toe/src/app/sign-up/sign-up.component.html
@@ -1,3 +1,6 @@
-<input type="text" placeholder="Name" #name>
-<input type="text" placeholder="Password" #pass>
-<button (click)=signUp(name.value,pass.value)>register</button>
+<div class="container">
+    <h1>SIGN UP</h1>
+    <input type="text" placeholder="Name" #name><br>
+    <input type="text" placeholder="Password" #pass><br>
+    <button (click)=signUp(name.value,pass.value)>register</button>
+</div>
