--- a/client/Tic-Tac-Toe/src/app/sign-up/sign-up.component.html
+++ b/client/Tic-Tac-Toe/src/app/sign-up/sign-up.component.html
@@ -2,5 +2,5 @@
     <h1>SIGN UP</h1>
     <input type="text" placeholder="Name" #name><br>
     <input type="text" placeholder="Password" #pass><br>
-    <button (click)=signUp(name.value,pass.value)>register</button>
+    <button (click)=validation(name.value,pass.value)>register</button>
 </div>
