--- a/client/Tic-Tac-Toe/src/app/game/game.component.html
+++ b/client/Tic-Tac-Toe/src/app/game/game.component.html
@@ -1,4 +1,5 @@
-<div>
+<button class="exitBTN"><a routerLink="/lobby"><i class="fa fa-sign-out"></i></a></button>
+<div class="game">
     <div class="status text-center p-4">
         {{ statusMessage}}
     </div>
@@ -10,11 +11,12 @@
     <button *ngIf="gameOver" class="btn btn-primary new-game" (click)="emitNewGame()">New Game</button>
 </div>
 
-<div >
+<div>
     <form>
         <input #message id="message" placeholder="Enter message">
         <button (click)=emitMessage(message.value)>submit</button>
-        <p #messageShow [innerHTML]="messageData"></p>
-        <!-- {{messageData}} -->
+        <div class="chat">
+               <p #messageShow [innerHTML]="messageData"></p>     
+        </div>
     </form>
 </div>
