--- a/client/Tic-Tac-Toe/src/app/game/game.component.html
+++ b/client/Tic-Tac-Toe/src/app/game/game.component.html
@@ -1,4 +1,4 @@
-<button class="exitBTN"><a routerLink="/lobby"><i class="fa fa-sign-out"></i></a></button>
+<button class="exitBTN" (click)="emitExit()"><i class="fa fa-sign-out"></i></button>
 <div class="game">
     <div class="status text-center p-4">
         {{ statusMessage}}
